mostrando status corto

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <p>Hola Chanchito</p>
-    <script src="./archivo2.js"></script>
+<div class="hola">
+    <button>xd</button>
+</div>
+    <script src="./app.js"></script>
 </body>
 </html>
